force-app/main/default/objects/Refund_and_Waive_off_Request__c/Refund_and_Waive_off_Request__c.object-meta.xml
<CustomObject>
    <label>Refund and Waive off Request</label>
    <nameField>
        <displayFormat>RW-{000000}</displayFormat>
        <label>Refund and Walve off Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund and Waive off Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>