force-app/main/default/objects/Refund_and_Waive_off_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Refund and Waive off Requests</relationshipLabel>
    <relationshipName>Refund_and_Walve_off_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>