force-app/main/default/objects/Refund_and_Waive_off_Request__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipLabel>Refund and Waive off Requests</relationshipLabel>
    <relationshipName>Refund_and_Waive_off_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>